src/objects/Leader_Board__c.object
<CustomObject>
    <fields>
        <fullName>Average__c</fullName>
        <label>Average</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Score__c</fullName>
        <label>Best Score</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <description>Number of times the subscriber has taken the exam.</description>
        <label>Trial</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Profile</label>
        <referenceTo>UserProfile__c</referenceTo>
        <relationshipLabel>Leader Boards</relationshipLabel>
        <relationshipName>Leader_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Leader Board</label>
    <nameField>
        <label>Leader Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leader Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>